--- a/index.html
+++ b/index.html
@@ -8,9 +8,47 @@
 </head>
 <body>
     <header>
-        <img src="img/Logo.png">
-        <h1>Toboolist</h1>
+        <div class="logotext">
+           <img src="img/Logo.png">
+           <h1>Toboolist</h1>
+        </div>
     </header>
+    <main>
+        <section class="push">
+            <button>Add Task</button>
+            <button>Add Section</button>
+        </section>
+
+        <hr>
+
+        <section class="task">
+            <ul>
+                <h3>New Task</h3>
+                <li>Quarterly Newsletter <span>Editorial</span></li>
+            </ul>
+        </section>
+
+        <section class="today">
+            <ul>
+                <h3>Today</h3>
+                <li>Quarterly Newsletter<span> Editorial</span></li>
+                <li>Quarterly Newsletter<span> Editorial</span></li>
+                <li>Recruiting blog post<span> Editorial</span></li>
+                <li>Quarterly Newsletter<span> Editorial</span></li>
+            </ul>
+        </section>
+
+        <section class="upcoming">
+            <ul>
+                <h3>Today</h3>
+                <li>Recruiting blog post<span> Editorial</span></li>
+                <li>Quarterly Newsletter<span> Editorial</span></li>
+                <li>Quarterly Newsletter<span> Editorial</span></li>
+                <li>Quarterly Newsletter<span> Editorial</span></li>
+            </ul>
+
+        </section>
+    </main>
     
 </body>
 </html>
