--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <section class="push">
-            <button>Add Task</button>
-            <button>Add Section</button>
+            <button class="button uno">Add Task</button>
+            <button class="button due">Add Section</button>
         </section>
 
         <hr>
@@ -24,27 +24,27 @@
         <section class="task">
             <ul>
                 <h3>New Task</h3>
-                <li>Quarterly Newsletter <span>Editorial</span></li>
+                <li>Quarterly Newsletter <span> Editorial</span></li>
             </ul>
         </section>
 
         <section class="today">
             <ul>
                 <h3>Today</h3>
-                <li>Quarterly Newsletter<span> Editorial</span></li>
-                <li>Quarterly Newsletter<span> Editorial</span></li>
-                <li>Recruiting blog post<span> Editorial</span></li>
-                <li>Quarterly Newsletter<span> Editorial</span></li>
+                <li>Quarterly blog post<span> Editorial</span></li>
+                <li>Mobile app luaunch<span> Q1 Goals</span></li>
+                <li>Interview John H.<span> Recruiting</span></li>
+                <li>Summit update to mobile stereofronts<span> Mobile</span></li>
             </ul>
         </section>
 
         <section class="upcoming">
             <ul>
-                <h3>Today</h3>
-                <li>Recruiting blog post<span> Editorial</span></li>
-                <li>Quarterly Newsletter<span> Editorial</span></li>
-                <li>Quarterly Newsletter<span> Editorial</span></li>
-                <li>Quarterly Newsletter<span> Editorial</span></li>
+                <h3>Upcoming</h3>
+                <li>Schedule meeting with Alex<span> </span></li>
+                <li>Homepage refresh<span> Website</span></li>
+                <li>Onboard new Sales team members<span> Sales</span></li>
+                <li>Review editorial calendar<span> Editorial</span></li>
             </ul>
 
         </section>
