--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
 
         <section class="task">
             <ul>
-                <h3>New Task</h3>
-                <li>Quarterly Newsletter <span> Editorial</span></li>
+                <h3>&#9660 New Task</h3>
+                <li class="check">Quarterly Newsletter <span class="edit"> Editorial</span></li>
             </ul>
         </section>
 
         <section class="today">
             <ul>
-                <h3>Today</h3>
-                <li>Quarterly blog post<span> Editorial</span></li>
-                <li>Mobile app luaunch<span> Q1 Goals</span></li>
-                <li>Interview John H.<span> Recruiting</span></li>
-                <li>Summit update to mobile stereofronts<span> Mobile</span></li>
+                <h3>&#9660 Today</h3>
+                <li class="check">Quarterly blog post <span class="edit"> Editorial</span></li>
+                <li class="check">Mobile app luaunch <span class="goal"> Q1 Goals</span></li>
+                <li class="check">Interview John H. <span class="recruit"> Recruiting</span></li>
+                <li class="xmark">Summit update to mobile stereofronts <span class="mobile"> Mobile</span></li>
             </ul>
         </section>
 
         <section class="upcoming">
             <ul>
-                <h3>Upcoming</h3>
-                <li>Schedule meeting with Alex<span> </span></li>
-                <li>Homepage refresh<span> Website</span></li>
-                <li>Onboard new Sales team members<span> Sales</span></li>
-                <li>Review editorial calendar<span> Editorial</span></li>
+                <h3>&#9660 Upcoming</h3>
+                <li class="xmark">Schedule meeting with Alex <span> </span></li>
+                <li class="check">Homepage refresh <span class="web"> Website</span></li>
+                <li class="check">Onboard new Sales team members <span class="sales"> Sales</span></li>
+                <li class="check">Review editorial calendar <span class="edit"> Editorial</span></li>
             </ul>
 
         </section>
